--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "clemsonmartech/laravel-shibboleth",
-  "description": "Fork of razorbacks/laravel-shibboleth in order to support modern Laravel",
+  "description": "Fork of clemsonmartech/laravel-shibboleth to support modern Laravel (laravel 11 and 12)",
   "authors": [
     {
       "name": "Brandon Simmons",
@@ -9,10 +9,10 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "illuminate/support": "^9.0 || ^11.0",
-    "laravel/framework": "^9.0 || ^11.0",
+    "illuminate/support": "^9.0 || ^10 || ^11.0 || ^12.0",
+    "laravel/framework": "^9.0 || ^10 || ^11.0 || ^12.0",
     "mrclay/shibalike": "1.0.0",
-    "php-open-source-saver/jwt-auth": "^1.4 || ^2.0"
+    "php-open-source-saver/jwt-auth": "^1.4 || ^2.0 || ^2.8"
   },
   "autoload": {
     "psr-4": {
